Changed the name to Jimmy as test

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Steve's birthday 🎉</h1>
+            <h1>Today is Jimmy's birthday 🎉</h1>
             <img id="bff-img" src="images/steve1.jpg">
             <h2 id="bday-age">61 years old</h2>
             <h4 id="bday-date">08.16.2023</h4>
